--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
           <a class="nav-link" href="addUser.html">Add Users</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="addUser.html">List All Users(formatted)</a>
+          <a class="nav-link" href="listAllUsers.html">List All Users(formatted)</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="addUser.html" >List All Users (raw)</a>
